# snorkel

./: .gitignore  Cargo.toml  README.md  fix_compile.patch  fix_compile2.patch  run_cluster.sh  run_node1.sh  run_node2.sh  run_node3.sh  seed_data.sh  stop_cluster.sh  stress_test.sh
.github/workflows/: ci.yml
scripts/: generate_traces.py
src/: lib.rs  main.rs
src/alerts/: checker.rs  config.rs  mod.rs  notifier.rs
src/api/: handlers.rs  mod.rs  server.rs
src/cluster/: aggregator.rs  client.rs  config.rs  coordinator.rs  load_balancer.rs  mod.rs  topology.rs
src/compaction/: mod.rs  subsample.rs  ttl.rs
src/data/: column.rs  mod.rs  shard.rs  table.rs  value.rs
src/ingest/: kafka.rs  mod.rs
src/otel/: ingest.rs  mod.rs  model.rs
src/query/: aggregates.rs  cache.rs  executor.rs  mod.rs  parser.rs  planner.rs  predicate.rs  simd_agg.rs
src/storage/: bloom.rs  dictionary.rs  engine.rs  memory.rs  mod.rs  partitioner.rs
src/storage/compression/: bitpack.rs  delta.rs  lz4.rs  mod.rs  rle.rs
src/storage/persistence/: mmap.rs  mod.rs  snapshot.rs
src/ui/: app.js  chart.js  index.html  query-builder.js  query-forms.js  traces.js
