[package]
name = "snorkel"
version = "0.1.0"
edition = "2021"
description = "In-memory time-series analytics database with SQL-like queries"
default-run = "snorkel"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = "0.40"
parking_lot = "0.12"
dashmap = "5"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower = { version = "0.5", features = ["util"] }
regex = "1"
fxhash = "0.2"
reqwest = { version = "0.11.24", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
